/*
 * Copyright (C) 2023 Hedera Hashgraph, LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package com.hedera.mirror.web3.evm.store.hedera;

import com.hedera.mirror.web3.evm.store.hedera.impl.UpdatableReferenceCacheLineState;
import com.hedera.mirror.web3.evm.store.hedera.impl.UpdatableReferenceCacheLineState.Entry;
import java.util.HashMap;
import java.util.Map;
import lombok.NonNull;

/**
 * Runs a cache for references but treated as values, for use as part of a
 * _stacked_ cache with _commit_/_rollback_ to lower levels.
 *
 * Keeps track of current value of k/v pair, including if the key has been
 * deleted.  **Does not permit** a value to be "updated" because if you
 * actually _updated_ a reference associated with a key you'd _also_ be
 * changing that same reference in a lower-level cache, which would break
 * the intent of being able to commit/rollback.  Checked at runtime.  (But
 * prefer using an immutable type for the value so this problem simply
 * can't happen.)
 *
 * Type checking that the value type is consistent is the responsibility of
 * the caller.
 *
 * @param <K> key type
 */

public class UpdatableReferenceCache<K> {

    @NonNull
    protected final Map<K, Object> original = new HashMap<>(); // "missing" denoted by null values here

    @NonNull
    protected final Map<K, Object> current = new HashMap<>(); // "deleted" denoted by null values here

    @NonNull
    protected final UpdatableReferenceCacheLineState<K> cacheLineStateIdentification =
            new UpdatableReferenceCacheLineState<>();

    /**
     * Create an `UpdatableReferenceCache` for holding the cached value of some type. */
    UpdatableReferenceCache() {}

    /**
     * Get from the cache
     */
    public Entry get(@NonNull final K key) {
        return getCacheLineState(key);
    }

    /**
     * Fill cache with a read from a lower level - used only in response to NOT_YET_FETCHED.
     */
    public void fill(@NonNull final K key, final Object value) {
        switch (getCacheLineState(key).state()) {
            case NOT_YET_FETCHED -> original.put(key, value);
            case MISSING, PRESENT -> throw new IllegalArgumentException("Trying to override a lower-level entry");
            case UPDATED, DELETED -> throw new IllegalArgumentException("Trying to override an updated entry");
            case INVALID -> throw new IllegalArgumentException("Trying to do something in an invalid state");
        }
    }

    /**
     * Put a new k/v or update an existing k/v, but _disallows_ attempt to _update_
     * an existing k/v with _the same value_ - because that would indicate that you
     * updated the reference value breaking the commit/rollback ability of this
     * (component of a) stacked cache.
     */
    @SuppressWarnings({"fallthrough", "java:S1301"
    }) // "replace this `switch` by an `if` to improve readability" - no: wrong advice here
    public void update(@NonNull final K key, @NonNull final Object value) {
        final var currentState = getCacheLineState(key);
        switch (currentState.state()) {
            case PRESENT:
                if (currentState.value() == value) {
                    throw new IllegalArgumentException("Trying to update a value with exact same reference - probably "
                            + "indicates an error where the value was modified");
                }
                // fallthrough
            case NOT_YET_FETCHED, MISSING, UPDATED, DELETED:
                current.put(key, value);
                break;
            case INVALID:
                throw new IllegalArgumentException("Trying to do something in an invalid state");
        }
    }

    /**
     * Delete from the cache - meaning that this key is considered _deleted_, not
     * a cache miss.
     */
    public void delete(@NonNull final K key) {
        switch (getCacheLineState(key).state()) {
            case PRESENT -> current.put(key, null);
            case UPDATED -> current.remove(key);
            case NOT_YET_FETCHED -> throw new IllegalArgumentException(
                    "Trying to delete a value that hasn't been fetched");
            case MISSING, DELETED -> throw new IllegalArgumentException(
                    "Trying to delete a missing/already deleted value");
            case INVALID -> throw new IllegalArgumentException("Trying to do something in an invalid state");
        }
    }

    /**
     * This is the implementation of `commit`: merge another cache's updated
     * entries over ours.  Don't need to merge the originals because the intent of
     * this class is to support a stacked cache and the lower layers of the stack
     * (such as this one, being coalesced _into_) already have those entries.
     */
    public void coalesceFrom(@NonNull final UpdatableReferenceCache<K> source) {
        current.putAll(source.current);
    }

    @NonNull
    protected Entry getCacheLineState(@NonNull final K key) {
        return cacheLineStateIdentification.get(original, current, key);
    }
}
